test/indexOutOfBounds12.slq

def main(){
	x:=0:int[3];
	x[3]=1:ğ”¹; /// error
	return x;
}
